Added copy sound and option to enable/disable it

--- a/extension/popup/options.html
+++ b/extension/popup/options.html
@@ -12,6 +12,9 @@
 		<div class="textwrapper">
 			<textarea class="link-list" wrap="off" readonly></textarea>
 		</div>
+		<div class="options">
+			<div id="play-copy-sound"><input type="checkbox">Play copy sound</div>
+		</div>
 		<div class="container">
 			<div class="button first" id="button-copy" title="Copy links to clipboard" >Copy</div>
 			<div class="button last" id="button-clear" title="Clear link list">Clear</div>
